correct cart spacing for mobile view

--- a/src/Layout/Styles/index.scss
+++ b/src/Layout/Styles/index.scss
@@ -19,6 +19,11 @@
     #navBar{
         display: none;
     }
+    #authNmenuDiv{
+        display: flex;
+        align-items: center;
+        gap: 1.5em;
+    }
     #authButtonDiv{
             display: none;
     }
